[main] fixing canvas too large issue

--- a/src/components/main/MainView.css
+++ b/src/components/main/MainView.css
@@ -1,3 +1,5 @@
-.AuthorText {
-    font-size: 8pt;
+.HeaderText {
+    font-size: 10px;
+    font-weight: bold;
+    align-self: center;
 }
